# yolov8_detect

./: CMakeLists.txt  CMakeLists1111.txt  README.md  image_log_success.txt
include/: dma_alloc.hpp
launch/: yolov8_tracking.launch.py
model/: resize.cpp
src/: yolov8_detect.cc  yolov8_detect_node.cpp  yolov8_track_depth_node copy.cpp  yolov8_track_pub_node.cc
src/bytetrack/: BYTETracker.cpp
src/utils/: cv_draw.cpp  encode_frame.cc  encode_frame.h  image_utils.c  image_utils.h  yolov8.cc
